fix regarding value not showing up

--- a/client/css/reports-manager.css
+++ b/client/css/reports-manager.css
@@ -615,7 +615,7 @@ main.preview-left #stages {
 					grid-gap: calc(var(--gap) * 2);
 					width: max-content;
 				}
-				.visualization-form .transformations .transformation > .restrict_type {
+				.visualization-form .transformations .transformation > .restrict-column {
 					display: grid;
 					grid-template-columns: repeat(2, max-content);
 				}
